--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
         <div class="modal"> 
             <button data-modal-close class="close-modal">
                 <svg class="close-sign" width="18" height="18">
-                    <use href="/images/sprite.svg#icon-close-sign"></use>
+                    <use href="./images/sprite.svg#icon-close-sign"></use>
                 </svg>
             </button>
         </div>
